--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
 .hero-section {
   width: 100%;
   padding: 100px 20px;
-  color: rgb(255, 255, 255);
+  color: #211C84;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
@@ -39,7 +39,7 @@ body {
 }
 
 .impact-section, .workflow-section, .features-section {
-  background: white;
+  background: rgba(199, 211, 255, 0.3);
   width: 1000px;
   margin: 40px auto;
   padding: 20px;
@@ -49,6 +49,12 @@ body {
   border-bottom: 10px solid #ddd; /* Adds a subtle connection */
 }
 
+.impact-section {
+  margin-bottom: 40px;
+}
+.impact-section h2 {
+  color: #7A73D1;
+}
 .impact-content {
   display: flex;
   justify-content: space-around;
@@ -56,7 +62,7 @@ body {
 }
 
 .impact-card {
-  background: #ecf0f1;
+  background: rgba(255, 255, 255, 0.7);
   padding: 20px;
   border-radius: 10px;
   width: 30%;
@@ -84,15 +90,16 @@ body {
   align-items: center;
   margin-bottom: 20px;
 }
-
+.workflow-section h2 {
+  color: #7A73D1;
+}
 .step-card {
-  background: #ecf0f1;
+  background: rgba(255, 255, 255, 0.7);
   padding: 15px;
   border-radius: 10px;
-  width:1000px;
+  width:930px;
   text-align: center;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  border-bottom: 7px solid #ddd;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .downward-arrow {
@@ -106,9 +113,13 @@ body {
   margin: 40px auto;
   padding: 20px;
   border-radius: 10px;
-  background: white;
+  background: rgba(199, 211, 255, 0.3);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
+  margin-bottom: 120px;
+}
+.features-section h2 {
+  color: #7A73D1;
 }
 
 .features-container {
@@ -118,10 +129,10 @@ body {
 }
 
 .feature-card {
-  background: #ecf0f1;
+  background: rgba(255, 255, 255, 0.7);
   padding: 15px;
   border-radius: 10px;
-  width: 80%;
+  width: 930px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   text-align: left;
   margin-bottom: 25px;
@@ -144,7 +155,7 @@ body {
   width: 100%;
   text-align: center;
   padding: 20px;
-  background: #1a1a2e; /* Dark Blue for a more modern feel */
+  background: rgba(11, 91, 211, 0.3); /* Dark Blue for a more modern feel */
   color: #e0e0e0;
   position: fixed;
   bottom: 0;
