--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -1,6 +1,6 @@
 /* Navbar Styles */
 .navbar {
-  position: fixed; /* Fix it at the top */
+  position: fixed !important; /* Fix it at the top */
   top: 0;
   left: 50%; /* Move navbar to center */
   transform: translateX(-50%); /* Properly center it */
@@ -10,7 +10,7 @@
   justify-content: center;
   border-radius: 20px;
   height: 60px;
-  background-color: rgba(213, 213, 213, 0.4);
+  background-color: rgba(255, 242, 196, 0.4);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(5px);  
   align-items: center;
@@ -18,7 +18,7 @@
   margin: 15px 0 0 0;
   li {
     list-style: none;
-    color: rgb(0, 0, 0);
+    color: #4D55CC;
     font-family: 'Poppins', sans-serif;    
     font-weight: bold;
     padding: 12px 16px;
@@ -49,7 +49,7 @@
 }
 
 .navbar-logo {
-color: rgb(0, 0, 0);
+color: #4D55CC;
 font-size: 14px;
 font-weight: bold;
 text-decoration: none;
@@ -72,7 +72,7 @@ cursor: pointer;
 display: center;
 width: 25px;
 height: 3px;
-background: white;
+background: #4D55CC;
 margin: 5px auto;
 transition: 0.3s;
 }
@@ -89,13 +89,13 @@ margin: 0 15px;
 
 .nav-link {
 text-decoration: none;
-color: rgb(0, 0, 0);
+color: #4D55CC;
 font-size: 18px;
 transition: 0.3s;
 }
 
 .nav-link:hover {
-color: #00bcd4;
+color: #211C84;
 }
 
 /* Responsive Navbar */
